<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_car">

    <fragment
        android:id="@+id/navigation_car"
        android:name="com.example.dataride.ui.car.CarFragment"
        android:label="@string/title_car"
        tools:layout="@layout/fragment_car" />

    <fragment
        android:id="@+id/navigation_navigation"
        android:name="com.example.dataride.ui.navigation.NavigationFragment"
        android:label="@string/title_navigation"
        tools:layout="@layout/fragment_navigation" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.example.dataride.ui.statistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />

</navigation>